<resources>
    <string name="egov_label">MeGov</string>
    <string name="app_name">Egov</string>
    <string name="logostring">logo</string>
    <string name="otp_textfield">Please enter the 5-digit OTP sent to your registered phone no. and email ID to verify your account.</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="otp_button_label">Resend OTP</string>
    <string name="date_label">CREATED AT</string>
    <string name="additionaldetails_label">Complaint Description*</string>
    <string name="location_label">COMPLAINT LOCATION</string>
    <string name="status_label">COMPLAINT STATUS</string>
    <string name="complaintID_label">COMPLAINT NO</string>
    <string name="forgotpassword_hint">Enter mobile no.</string>
    <string name="forgotpassword_text">Please enter your registered phone number. A recovery message will be sent to your phone and to your registered email ID.</string>
    <string name="login_username">Email ID or Phone No.</string>
    <string name="login_password">Password</string>
    <string name="login_forgotlabel">Forgot Password?</string>
    <string name="login_buttonlabel">Create an account</string>
    <string name="submit_label">Submit</string>
    <string name="complainttype_label">Complaint Type (Required*)</string>
    <string name="complaintlocation_label">Please select complaint location on map and/or enter location name. If a picture with GPS data is added, location will automatically be set to that position.</string>
    <string name="complaintpicture_label">Please upload supporting picture(s)</string>
    <string name="propertytax_search_hint">Enter assessment number</string>
    <string name="watertax_search_hint">Enter consumer number</string>
    <string name="name_label">NAME</string>
    <string name="name_label_editprofile">NAME*</string>
    <string name="address_label">ADDRESS</string>
    <string name="owner_label">OWNER NAME</string>
    <string name="phone_label">PHONE NO.</string>
    <string name="phone_label_normal">Phone No.</string>
    <string name="phone_label_editprofile">PHONE NO.*</string>
    <string name="altphone_label">ALTERNATE PHONE NO.</string>
    <string name="email_label">EMAIL ADDRESS</string>
    <string name="email_label_normal">Email Address</string>
    <string name="email_label_editprofile">EMAIL ADDRESS*</string>
    <string name="dob_label_editprofile">DATE OF BIRTH*</string>
    <string name="aadhaar_label">AADHAR CARD NO.</string>
    <string name="pan_label">PAN CARD NO.</string>
    <string name="fullname_label">Full Name</string>
    <string name="password_label">Password</string>
    <string name="passwordconfirm_label">Confirm Password</string>
    <string name="registerbutton_label">Register</string>
    <string name="confirm_label">Confirm</string>
    <string name="registered_info">Registered</string>
    <string name="gender_unmentioned_label">TRANSGENDER</string>
    <string name="gender_female_label">FEMALE</string>
    <string name="gender_male_label">MALE</string>
    <string name="gender_label">GENDER</string>
    <string name="landmark_label">LANDMARK</string>
    <string name="area_label">Area (Required* if location not set on map)</string>
    <string name="gallery_label">Gallery</string>
    <string name="camera_label">Camera</string>
    <string name="details_type_label">COMPLAINT TYPE</string>
    <string name="history_label">COMPLAINT HISTORY</string>
    <string name="processing_label">Processing</string>
    <string name="completed_label">Completed</string>
    <string name="rejected_label">Rejected</string>
    <string name="comment_label">Comment</string>
    <string name="action_label">Action</string>
    <string name="login_field_empty_prompt">Please enter both username and password</string>
    <string name="session_expiry_message">Session expired</string>
    <string name="otp_resent_msg">OTP Resent</string>
    <string name="account_activated_msg">Account activated</string>
    <string name="processing_msg">Processing request</string>
    <string name="menu_label">Menu</string>
    <string name="home_label">Home</string>
    <string name="grievances_label">Grievances</string>
    <string name="propertytax_label">Property Tax</string>
    <string name="profile_label">My Profile</string>
    <string name="logout_label">Logout</string>
    <string name="account_recovery_label">Account Recovery</string>
    <string name="verify_account_label">Verify Account</string>
    <string name="createaccount_label">Create An Account</string>
    <string name="forgot_password_prompt">Please enter your registered phone number</string>
    <string name="mobilenumber_length_prompt">Mobile number must be 10 digits</string>
    <string name="noaccount_msg">No account exists associated with this mobile number</string>
    <string name="recoverymessage_msg">Recovery message sent</string>
    <string name="grievanceupdated_msg">Grievance updated</string>
    <string name="feedback_label">Feedback</string>
    <string name="reopend_label">Re-opened</string>
    <string name="forwarded_label">Forwarded</string>
    <string name="withdrawn_label">Withdrawn</string>
    <string name="newgrievance_label">New Grievance</string>
    <string name="grievancedetails_label">View Grievance</string>
    <string name="editprofile_label">Edit Profile</string>
    <string name="loading_label">Loading…</string>
    <string name="city_hint">Municipality</string>
    <string name="register_profile_municipality_info">Your account is specific to a municipality. You must register a new account if you wish to change to a new municipality.</string>
    <string name="splashscreen_loading">Preparing resources…</string>
    <string name="watertax_label">Water Tax</string>
    <string name="details_label">COMPLAINT DESCRIPTION</string>
    <string name="complaint_type_label">Complaint Type *</string>
    <string name="dob_label">DATE OF BIRTH</string>
    <string name="locality_label">LOCALITY</string>
    <string name="ownername_contactno_label">OWNER NAME/PHONE NO.</string>
    <string name="assessmentno_label">ASSESSMENT NO.</string>
    <string name="installments_label">Installments</string>
    <string name="consumercode_label">CONSUMER CODE</string>
    <string name="contactno_label">Contact no.</string>
    <string name="arrears_total">ARREARS TOTAL</string>
    <string name="arrears_penalty">ARREARS PENALTY</string>
    <string name="current_total">CURRENT TOTAL</string>
    <string name="current_penalty">CURRENT PENALTY</string>
    <string name="total">TOTAL</string>
    <string name="Rs">\u20B9</string>
    <string name="labelviewbreakupscreen">View Breakups</string>
    <string name="title_activity_property_tax_breakups_details">View Breakups</string>
    <string name="password_level_medium">Password must be at least 8 to 32 characters long and must have and at least one number, small and capital letter combination!</string>
    <string name="password_level_high">Password must be at least 8 to 32 characters long and must have one or more upper case and lower case alphabet, number and special character except &amp; &lt; &gt; # % \&quot; \' and space!</string>
    <string name="password_level_low">Password must be at least 4 to 32 characters long and must have at least one number, small and capital letter combination!</string>
    <string name="complaint_type_text">Complaint Type*</string>
    <string name="complaint_location_text">Complaint Location*</string>
    <string name="action_regcomplaint">Register complaint</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="feedback">FEEDBACK</string>
    <string name="updatecomplaint">UPDATE COMPLAINT</string>
    <string name="balance_due">BALANCE DUE</string>
    <string name="nocomplaints">No Complaints</string>

</resources>
